* dir_vnode_to_path() now uses B_* error codes instead of POSIX ones, and also   returns the correct error code if the buffer was too small (should be ERANGE   instead of ENOBUF). * Also, it is now independent of B_PATH_NAME_LENGTH, and therefore should   fulfill POSIX getcwd() requirements. This should also close ticket #3352. * Is there any reason to allocate another buffer instead of using memmove()   at the end instead of memcpy()?

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34276 a95241bf-73f2-0310-859d-f6bbb57e9c96